--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -40,36 +40,36 @@ a.badge:focus {
 
 .badge-primary {
 	color: #fff;
-	background-color: #1d2327;
+	background-color: #007bff;
 }
 
 a.badge-primary:hover,
 a.badge-primary:focus {
 	color: #fff;
-	background-color: #07090a;
+	background-color: #0062cc;
 }
 
 a.badge-primary:focus,
 a.badge-primary.focus {
 	outline: 0;
-	box-shadow: 0 0 0 0.2rem rgba(29, 35, 39, 0.5);
+	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
 .badge-secondary {
 	color: #fff;
-	background-color: #2c3338;
+	background-color: #6c757d;
 }
 
 a.badge-secondary:hover,
 a.badge-secondary:focus {
 	color: #fff;
-	background-color: #16191b;
+	background-color: #545b62;
 }
 
 a.badge-secondary:focus,
 a.badge-secondary.focus {
 	outline: 0;
-	box-shadow: 0 0 0 0.2rem rgba(44, 51, 56, 0.5);
+	box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 
 .badge-success {
@@ -234,45 +234,45 @@ a.badge-dark.focus {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-	background-color: #c0c1c3;
+	background-color: #b8daff;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-	border-color: #898d8f;
+	border-color: #7abaff;
 }
 
 .table-hover .table-primary:hover {
-	background-color: #b3b4b7;
+	background-color: #9fcdff;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-	background-color: #b3b4b7;
+	background-color: #9fcdff;
 }
 
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-	background-color: #c4c6c7;
+	background-color: #d6d8db;
 }
 
 .table-secondary th,
 .table-secondary td,
 .table-secondary thead th,
 .table-secondary tbody + tbody {
-	border-color: #919598;
+	border-color: #b3b7bb;
 }
 
 .table-hover .table-secondary:hover {
-	background-color: #b7b9bb;
+	background-color: #c8cbcf;
 }
 
 .table-hover .table-secondary:hover > td,
 .table-hover .table-secondary:hover > th {
-	background-color: #b7b9bb;
+	background-color: #c8cbcf;
 }
 
 .table-success,
@@ -605,7 +605,7 @@ input.medium-text {
 	height: 14px;
 	width: 14px;
 	background-color: #fff;
-	border: 1px solid #8c8f94;
+	border: 1px solid #adb5bd;
 	border-radius: 50%;
 }
 
@@ -694,7 +694,7 @@ label.required::after {
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
-	background-color: #f1f1f1;
+	background-color: #fff;
 	border-radius: 20px;
 	transition: opacity 0.2s ease-out 0.1s, transform 0.2s ease-out 0.1s;
 	transform: scale(1);
@@ -714,7 +714,7 @@ label.required::after {
 	width: 14px;
 	height: 14px;
 	transform: translate3d(0, -50%, 0);
-	background-color: #8c8f94;
+	background-color: #adb5bd;
 	border-radius: 100%;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
