--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -1,11 +1,7 @@
-
-// import theme variables
-@import "variables";
+// Bootstrap variables and functions
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
-
-// Bootstrap and its default variables
 @import "../../node_modules/bootstrap/scss/badge";
 @import "../../node_modules/bootstrap/scss/tables";
 
@@ -88,7 +84,7 @@ input.medium-text {
 		height: 14px;
 		width: 14px;
 		background-color: $white;
-		border: 1px  solid #8c8f94;
+		border: 1px  solid $gray-500;
 		border-radius: 50%;
 
 		&::after {
@@ -178,7 +174,7 @@ label.required {
 				width: 100%;
 				height: 100%;
 				box-sizing: border-box;
-				background-color: #f1f1f1;
+				background-color: $white;
 				border-radius: 20px;
 				transition: opacity 0.2s ease-out 0.1s, transform 0.2s ease-out 0.1s;
 				transform: scale(1);
@@ -198,7 +194,7 @@ label.required {
 				width: 14px;
 				height: 14px;
 				transform: translate3d(0, -50%, 0);
-				background-color: #8c8f94;
+				background-color: $gray-500;
 				border-radius: 100%;
 				box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 			}
